feat(datasetVersion): update GET /dataset-version (#413)
- added filters
- added pagination
- added sorting

+activeVersion on DatasetDetailsDto

closes #364
