# provoly-common/src/main/java/com/provoly/common/dataset/DatasetVersionDetailsDto.java
@@ -1,24 +1,24 @@
-package com.provoly.ref.datasetversion;
+package com.provoly.common.dataset;
 
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
-import com.provoly.common.dataset.DatasetState;
-import com.provoly.common.dataset.DatasetVersionDto;
 import com.provoly.common.metadata.MetadataValueReadDto;
 
-public class DatasetVersionDetailsDto extends DatasetVersionDto {
+public non-sealed class DatasetVersionDetailsDto extends DatasetVersionBaseDto {
     private List<MetadataValueReadDto> metadata;
     private boolean hasWarnings;
+    private DatasetDetailsDto dataset;
 
-    public DatasetVersionDetailsDto(UUID id, UUID dataset, UUID oClass, Instant lastModified,
+    public DatasetVersionDetailsDto(UUID id, DatasetDetailsDto dataset, UUID oClass, Instant lastModified,
             Integer version, DatasetState state, String fileName,
             List<MetadataValueReadDto> metadata, Instant productionDate, String producer, String additionalInformation) {
-        super(id, dataset, oClass, lastModified, version, state, fileName, productionDate, producer, additionalInformation);
+        super(id, oClass, lastModified, version, state, fileName, productionDate, producer, additionalInformation);
         this.metadata = metadata != null ? metadata : new ArrayList<>();
         this.hasWarnings = false;
+        this.dataset = dataset;
     }
 
     public boolean isHasWarnings() {
@@ -31,5 +31,9 @@ public class DatasetVersionDetailsDto extends DatasetVersionDto {
 
     public List<MetadataValueReadDto> getMetadata() {
         return metadata;
+    }
+
+    public DatasetDetailsDto getDataset() {
+        return dataset;
     }
 }
