# provoly-common/src/main/java/com/provoly/common/dataset/DatasetVersionDto.java
@@ -6,35 +6,18 @@ import java.util.UUID;
 import com.provoly.common.Default;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonIgnore;
 
-public class DatasetVersionDto {
+public non-sealed class DatasetVersionDto extends DatasetVersionBaseDto {
 
-    private UUID id;
     private UUID dataset;
-    private UUID oClass;
-    private Instant lastModified;
-    private Integer version;
-    private DatasetState state;
-    private String fileName;
-    private Instant productionDate;
-    private String producer;
-    private String additionalInformation;
 
     @Default
     @JsonCreator
     public DatasetVersionDto(UUID id, UUID dataset, UUID oClass, Instant lastModified, Integer version,
             DatasetState state, String fileName, Instant productionDate, String producer, String additionalInformation) {
-        this.id = id;
+        super(id, oClass, lastModified, version,
+                state, fileName, productionDate, producer, additionalInformation);
         this.dataset = dataset;
-        this.oClass = oClass;
-        this.lastModified = lastModified;
-        this.version = version;
-        this.state = state;
-        this.fileName = fileName;
-        this.productionDate = productionDate;
-        this.producer = producer;
-        this.additionalInformation = additionalInformation;
     }
 
     public DatasetVersionDto(UUID id, UUID dataset, UUID oClass, Instant lastModified, Integer version,
@@ -102,53 +85,11 @@ public class DatasetVersionDto {
         this(id, dataset, oClass, null, null, state, fileName, productionDate, producer, null);
     }
 
-    public UUID getId() {
-        return id;
-    }
-
     public UUID getDataset() {
         return dataset;
     }
 
-    public UUID getoClass() {
-        return oClass;
-    }
-
-    public Instant getLastModified() {
-        return lastModified;
-    }
-
-    public Integer getVersion() {
-        return version;
-    }
-
-    public DatasetState getState() {
-        return state;
-    }
-
-    public String getFileName() {
-        return fileName;
-    }
-
-    public Instant getProductionDate() {
-        return productionDate;
-    }
-
-    public String getProducer() {
-        return producer;
-    }
-
-    public String getAdditionalInformation() {
-        return additionalInformation;
-    }
-
-    /**
-     * withFile is not exported as fileName is present
-     *
-     * @see DatasetVersionDto#getFileName()
-     */
-    @JsonIgnore
-    public boolean isWithFile() {
-        return getFileName() != null && !getFileName().isBlank();
+    public void setDataset(UUID datasetId) {
+        this.dataset = datasetId;
     }
 }
